# comfyui-engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  api_server.py  benchmark.py  cli.py  dashboard.py  docker-compose.yml  environment.yml  generate_openapi.py  k6_load_test.js  main.py  mobile_app.py  push_to_github.sh  pyproject.toml  sdk.py  setup_wizard.py  verify_enhanced_features.py
.github/workflows/: ci-cd.yml  ci.yml  release.yml
benchmarks/: __init__.py  bench_core.py  bench_serialization.py
config/: development.env  production.env  prompts.yaml  staging.env
docs/: architecture_v2.md  openapi.json
engine/: __init__.py  ab_testing.py  advanced_ab_testing.py  api_client.py  api_docs.py  api_server_ws.py  audit_log.py  auto_scaler.py  backup_manager.py  batch.py  checkpoint_resume.py  circuit_breaker.py  cloud_providers.py  cluster_manager.py  command.py  config.py  core.py  cost_optimizer.py  cqrs.py  dead_letter_queue.py  deadline.py  distributed_queue.py  errors.py  events.py  feature_flags.py  genetic_optimizer.py  git_sync.py  gpu_autoscaler.py  health.py  job_dag.py  metrics.py  metrics_server.py  mlflow_tracker.py  model_cache.py  msgpack_bridge.py  multi_region_manager.py  node_discovery.py  notifications.py  observability.py  output_handler.py  (+27 more)
engine/actor/: base.py  manager.py  router.py
helm/comfyui-engine/: Chart.yaml  README.md  values-production.yaml  values-staging.yaml  values.yaml
helm/comfyui-engine/templates/: _helpers.tpl  backup.yaml  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  grafana-datasource.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  pvc.yaml  rbac.yaml  secret.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  vpa.yaml
helm/comfyui-engine/templates/tests/: test-connection.yaml  test-metrics.yaml
k8s/: deployment.yaml  hpa.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
monitoring/: alertmanager-config.yaml  fluentd-config.yaml  loki-config.yaml  prometheus-rules.yaml  prometheus.yml  promtail-config.yaml  promtail.yml
monitoring/grafana/dashboards/: comfyui-engine.json
scripts/: backup.sh  disaster_recovery.sh  pre-commit.sh  release.sh
systemd/: comfyui-engine@.service  install.sh
terraform/: README.md
terraform/aws/: README.md  backup.tf  eks.tf  helm_releases.tf  main.tf  outputs.tf  variables.tf
terraform/aws/environments/production/: main.tf  modules.tf  outputs.tf  variables.tf
terraform/aws/modules/ecr/: main.tf  variables.tf
terraform/aws/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/aws/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/azure/: README.md  aks.tf  backup.tf  main.tf  outputs.tf  variables.tf
terraform/environments/production/: main.tf
terraform/environments/staging/: main.tf
terraform/gcp/: README.md  backup.tf  gke.tf  main.tf  outputs.tf  variables.tf
terraform/modules/aws/: main.tf
terraform/modules/azure/: main.tf
terraform/modules/gcp/: main.tf
tests/: conftest.py  test_actor_model.py  test_architecture_improvements.py  test_batch.py  test_command_bus.py  test_comprehensive.py  test_deadline.py  test_engine.py  test_enhanced_protocols.py  test_integration.py  test_metrics.py  test_observability.py  test_pipeline.py  test_profiling.py  test_query_bus.py  test_retry_policy.py  test_shm_channel.py  test_subprocess_bridge.py  test_typed_channel.py  test_websocket_stream.py  test_worker_pool.py
tests/load/: k6_chaos_test.js  k6_load_test.js  locustfile.py  run_chaos_tests.sh  run_load_tests.sh
