[project]
name = "comfyui-engine"
version = "9.0.0"
description = "Production-ready async engine for ComfyUI with advanced features"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ComfyUI Engine Team", email = "team@comfyui-engine.dev"}
]
keywords = ["comfyui", "async", "api", "ml", "inference", "production"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── CORE dependencies ───────────────────────────────────────────────────────────
# Only what is required for the engine to run in basic mode.
# Heavy infra deps (k8s, cloud, mlflow) are in optional extras.
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.0",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
# ── Observability ────────────────────────────────────────────────────────────
tracing = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-prometheus>=1.21.0",
]
structured-logging = [
    "structlog>=24.0.0",
]
# ── Distributed ───────────────────────────────────────────────────────────────
redis = [
    "redis>=5.0.0",
]
# ── MLOps ─────────────────────────────────────────────────────────────────────
mlops = [
    "mlflow>=2.8.0",
    "numpy>=1.24.0",
]
# ── Cloud-Native ─────────────────────────────────────────────────────────────
cloud = [
    "kubernetes>=28.0.0",
    "boto3>=1.34.0",
    "google-cloud-compute>=1.14.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=30.0.0",
    "docker>=7.0.0",
]
# ── HTTP Client extras ──────────────────────────────────────────────────────
httpx = [
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
]
# ── Templates / Dashboard ───────────────────────────────────────────────────
ui = [
    "jinja2>=3.1.0",
]
# ── Development ───────────────────────────────────────────────────────────────
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]
# Convenience: install everything
all = [
    "comfyui-engine[tracing,structured-logging,redis,mlops,cloud,httpx,ui]",
]

[project.scripts]
comfyui-engine = "main:main"
comfyui-engine-wizard = "setup_wizard:main"
comfyui-engine-benchmark = "benchmark:main"
comfyui-engine-dashboard = "dashboard:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "tests*"]
exclude = ["tests.load*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "D", "UP",
    "B", "C4", "SIM", "ARG",
]
ignore = [
    "D100", "D104", "D107", "D203", "D213",
    "B008", "E501", "F401", "F541", "I001",
    "F841", "E741", "E402", "F821", "UP035",
    "D102", "D103", "D105", "D205", "D400",
    "D401", "D415", "D419",
    "B904", "B905",
    "C408", "C901",
    "SIM102", "SIM103", "SIM105", "SIM108",
    "SIM110", "SIM114", "SIM115", "SIM118",
    "SIM201", "SIM202", "SIM210", "SIM300",
    "ARG001", "ARG002", "ARG003", "ARG004", "ARG005",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ARG"]
"tests/load/*" = ["D", "ARG", "E", "F", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with ''-m \"not slow\"'')" ,
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "load: marks tests as load tests",
]

[tool.coverage.run]
source = ["engine"]
omit = ["tests/*", "tests/load/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
